feat: LAB3 проект переведён на ts
